요구 사항 구현 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">WeatherForecast</string>
+    <string name="local_weather">Local Weather</string>
+    <string name="local">Local</string>
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="weather_img_url">https://www.metaweather.com/static/img/weather/%s.svg</string>
 </resources>
